--- a/src/stylesheets/components/footer.scss
+++ b/src/stylesheets/components/footer.scss
@@ -7,4 +7,13 @@
   position:absolute;
   left:0;
   bottom:0;
+
+  .footer-copy{
+    font: {
+      size: 12px;
+    }
+    color: #999;
+    text-align:center;
+    line-height:$footerHeight;
+  }
 }
