글쓰기 폼 제작, host url 상수처리

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -11,7 +11,7 @@ $footerHeight: 50px;
 @import 'modules/reset';
 @import 'components/header';
 @import 'components/footer';
-
+@import 'components/writeForm';
 #App {
   background:{
   }
